<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Shredometer</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="soon">Soon!</string>
    <string name="imgcontent">note images</string>
    <string name="enter_bpm">Enter bpm</string>
    <string name="if_you_can">If you can play</string>
    <string name="at">At</string>
    <string name="then">Then you are playing</string>
    <string name="tap">Tap Tempo</string>
    <string name="calculate">Calculate</string>
    <string name="wrong">WRONG</string>
    <string name="ok">OK</string>
    <string name="tapHere">Tap Me!</string>
    <string name="reset">Reset</string>
    <string name="sendTo">Send to main</string>
    <string name="tapToMeasure">Tap to measure</string>
    <string name="text_about">Are you a musician? Are you a metronome freak? Then This app is
        for you! It can calculate how many notes per second you can reach by a given number of bpms (beats per minute).
        Now you can break your own speed limits or compare your technique skills to others and realize how much you suck!\n
        All rights reserved\nby Thanos Fisherman&#174; </string>
    <string name="tapInstructions">Tap the red circle multiple times with your finger to calculate the bpm tempo. 
        Try to keep it steady between the taps. If you feel you messed up the timing you must reset the calculator and start over.</string>

    <string-array name="notes_array">
        <item>Whole</item>
        <item>Half</item>
        <item>Quarters</item>
        <item>Eighths</item>
        <item>Triplet of Eighths</item>
        <item>Sixteenth</item>
        <item>Sixteenth-Quintuplet</item>
        <item>Sixteenth-Sextuplet</item>
        <item>Sixteenth-Septuplet</item>
        <item>Thirty seconds</item>
        <item>Thirtysecond-Twelvetuplet</item>
        <item>Sixtyfourth</item>
    </string-array>

    <integer-array name="notes_values">
        <item>@drawable/whole</item>
        <item>@drawable/half</item>
        <item>@drawable/quarter</item>
        <item>@drawable/eighth</item>
        <item>@drawable/tripleteighth</item>
        <item>@drawable/sixteen</item>
        <item>@drawable/quintuplet</item>
        <item>@drawable/sextuplet</item>
        <item>@drawable/septuplet</item>
        <item>@drawable/thirtysecond</item>
        <item>@drawable/twelvetuplet</item>
        <item>@drawable/sixtyfour</item>
    </integer-array>

    <string-array name="explanation">
        <item>1 note every 4 beats</item>
        <item>1 note every 2 beats </item>
        <item>1 note every 1 beat</item>
        <item>2 notes every 1 beat</item>
        <item>3 notes every 1 beat</item>
        <item>4 notes every 1 beat</item>
        <item>5 notes every 1 beat</item>
        <item>6 notes every 1 beat</item>
        <item>7 notes every 1 beat</item>
        <item>8 notes every 1 beat</item>
        <item>12 notes every 1 beat</item>
        <item>16 notes every 1 beat</item>
    </string-array>

</resources>