<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tap_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="7.0dp" >

        <TextView
            android:id="@+id/txt_tap_instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/tapInstructions"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/txt_tap"
            android:layout_width="180dp"
            android:layout_height="120dp"
            android:layout_below="@+id/txt_tap_instructions"
            android:layout_centerInParent="true"
            android:layout_marginTop="18.0dp"
            android:background="@drawable/circle_button"
            android:clickable="true"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/tapHere"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_tap"
            android:layout_centerInParent="true"
            android:layout_marginTop="18dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_tap_reset"
                android:layout_width="0.0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/reset" />

            <View
                android:layout_width="0.0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.03" />

            <Button
                android:id="@+id/btn_tap_send"
                android:layout_width="0.0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:text="@string/sendTo" />
        </LinearLayout>
    </RelativeLayout>

</ScrollView>