<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/scrollmain"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:fitsSystemWindows="true"
            tools:context="com.fisherman.shredometer.activities.MainActivity">

    <LinearLayout
        android:id="@+id/ll_main_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llmain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="6.0dp">

            <TextView
                android:id="@+id/txtif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|top"
                android:text="@string/if_you_can"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <Spinner
                android:id="@+id/notes_spinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5.0dp"
                android:background="@drawable/spinner_background_ab_shredometer"
                android:dropDownSelector="@android:color/transparent"
                android:popupBackground="@android:color/transparent"/>

            <TextView
                android:id="@+id/txtat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8.0dp"
                android:text="@string/at"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3.2dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edit_bpm"
                    android:layout_width="0.0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:ems="10"
                    android:hint="@string/enter_bpm"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLength="4"
                    android:singleLine="true"/>

                <View
                    android:layout_width="0.0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.08"/>

                <Button
                    android:id="@+id/btn_tap"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="0.0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@drawable/btn_tap"
                    android:text="@string/tap"
                    android:textStyle="bold"/>
            </LinearLayout>

            <TextView
                android:id="@+id/txtthen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20.0dp"
                android:text="@string/then"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <Button
                android:id="@+id/btn_calc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="9.0dp"
                android:background="@drawable/btn_calc"
                android:paddingLeft="30.0dp"
                android:paddingRight="30.0dp"
                android:text="@string/calculate"
                android:textColor="@color/btn_calc_color"
                android:textStyle="bold"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="15.0dp"/>

            <TextView
                android:id="@+id/text_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/red"
                android:textSize="36.0sp"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_forads"
            android:layout_gravity="center_horizontal|bottom"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</ScrollView>